# BARQ-Rebuild

./: .gitignore  Dockerfile  MASTER_PROMPT.md  README.md
barq_bringup/: package.xml  setup.cfg  setup.py
barq_bringup/config/: barq_nav2.yaml  barq_slam.yaml  ros2_controllers.yaml
barq_bringup/launch/: control.launch.py  real.launch.py  sim.launch.py  visualize.launch.py
barq_bringup/rviz/: barq.rviz  barq_slam.rviz
barq_control/: package.xml  setup.cfg  setup.py
barq_control/barq_control/: __init__.py  barq_protocol.py  gait.py  gait_planner_node.py  ik_node.py  leg_kinematics.py  odom_tf_node.py  state_estimator_node.py
barq_control/test/: test_estimator.py  test_exact_kinematics.py  test_gait.py  test_ik.py  test_protocol.py
barq_description/: CMakeLists.txt  package.xml
barq_description/config/: joint_conventions.yaml  robot_params.yaml
barq_description/urdf/: barq.urdf  barq.urdf.xacro
barq_firmware/: README.md  platformio.ini
barq_firmware/src/: loop_core.cpp  loop_core.h  main.cpp  protocol.cpp  protocol.h
barq_firmware/test/test_protocol/: main.cpp
barq_hardware/: CMakeLists.txt  package.xml
barq_hw/: CMakeLists.txt  README.md  barq_hw_plugin.xml  package.xml
barq_hw/include/barq_hw/: barq_system.hpp
barq_hw/src/: barq_system.cpp  teensy_emulator.cpp
barq_hw/test/: integration_pty.py
barq_sim/: package.xml  setup.cfg  setup.py
barq_sim/worlds/: barq_course.sdf  barq_world.sdf
diagnostics/: README.md  analyze_track_bag.py  plot_torque.py  sim_actuation_probe.py  sim_walk_metric.py  st3215_diag.py  torque_from_bag.py
docs/: 00_OVERVIEW.md  01_STATUS.md  02_DECISIONS.md  03_CHANGELOG.md  04_OPEN_QUESTIONS.md  05_RESEARCH_LOG.md  06_PROTOCOL.md  HANDOFF.md  README.md
docs/reports/: BARQ_Report_2.tex  generate_report2.py
docs/research/: 2026-06-11-lidar-selection.md  2026-06-13-torque-budget.md  2026-06-13-torque-phase.csv  2026-06-13-torque-timeseries.csv
docs/roadmap/: 00_DOOMSDAY_PROTOCOL.md  README.md
docs/roadmap/appendices/: A_FAILURE_TREES.md  B_ACCEPTANCE_GATES.md  C_COMMAND_CRIB.md  D_RISK_REGISTER.md  E_PARAMETER_REGISTRY.md
docs/roadmap/phase-0-environment/: 01_REBUILD_FROM_ZERO.md  02_BOM_PROCUREMENT.md  03_BENCH_SETUP.md
docs/roadmap/phase-1-power-electronics/: 01_POWER_TREE.md  02_MONITORING_INA260.md  03_TEENSY_AND_BUS_WIRING.md  04_BNO085_BRINGUP.md
docs/roadmap/phase-2-calibration-assembly/: 01_SERVO_BENCH_CALIBRATION.md  02_ASSEMBLY_SEQUENCE.md  03_ZEROING_LIMITS_VALIDATION.md
docs/roadmap/phase-3-firmware-integration/: 01_SERVO_BUS_DRIVER.md  02_IMU_POWER_INTEGRATION.md  03_HIL_VALIDATION.md
docs/roadmap/phase-4-standing-walking/: 01_FIRST_STAND.md  02_FIRST_STEPS.md  03_ESTIMATOR_AND_SAFETY.md
(+10 files in other folders)
